--- a/TDDToDo/Base.lproj/Main.storyboard
+++ b/TDDToDo/Base.lproj/Main.storyboard
@@ -1,26 +1,48 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GQf-cF-zhA">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item List View Controller-->
+        <scene sceneID="Gwt-Gh-L07">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ItemListViewController" id="GQf-cF-zhA" customClass="ItemListViewController" customModule="TDDToDo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="Rhb-9R-aaO"/>
+                        <viewControllerLayoutGuide type="bottom" id="GOp-Bs-pEB"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="XNF-8X-28I">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yVH-yd-fRa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yVH-yd-fRa" firstAttribute="top" secondItem="XNF-8X-28I" secondAttribute="top" id="ODY-hX-oS6"/>
+                            <constraint firstAttribute="trailing" secondItem="yVH-yd-fRa" secondAttribute="trailing" id="Ps1-ow-mAa"/>
+                            <constraint firstItem="GOp-Bs-pEB" firstAttribute="top" secondItem="yVH-yd-fRa" secondAttribute="bottom" id="dVI-qB-SL3"/>
+                            <constraint firstItem="yVH-yd-fRa" firstAttribute="leading" secondItem="XNF-8X-28I" secondAttribute="leading" id="vOd-Wf-r0B"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="dataProvider" destination="ieM-Ls-KW3" id="ZAh-hb-yTf"/>
+                        <outlet property="tableView" destination="yVH-yd-fRa" id="5Ox-cU-f8N"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YSc-1j-EOe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="ieM-Ls-KW3" customClass="ItemListDataProvider" customModule="TDDToDo" customModuleProvider="target"/>
             </objects>
+            <point key="canvasLocation" x="-18.399999999999999" y="205.54722638680661"/>
         </scene>
     </scenes>
 </document>
